<resources>
    <string name="app_name">Outlet</string>
    <string name="botao_adicionar_produto">Botao Adicionar Produto</string>
    <string name="imagem_descritiva_do_produto">Imagem descritiva do produto</string>
    <string name="add_produto_fab">Add Produto</string>
    <string name="nome_hint">Nome</string>
    <string name="descricao_hint">Descrição</string>
    <string name="valor_hint">Valor</string>
    <string name="salvar_button">SALVAR</string>
    <string name="botao_menu_editar">Editar</string>
    <string name="botao_menu_remover">Remover</string>
    <string name="nome_desc">nome desc</string>
    <string name="nome_asc">nome asc</string>
    <string name="descri_o_desc">descrição desc</string>
    <string name="descri_o_asc">descrição asc</string>
    <string name="valor_desc">valor desc</string>
    <string name="valor_asc">valor asc</string>
    <string name="sem_ordena_o">sem ordenação</string>
    <string name="ordenar">Ordenar</string>
    <string name="url_da_imagem">URL da imagem</string>
    <string name="carregar">Carregar</string>
</resources>